--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "bunyan": "^1.8.12",
-    "express": "4.16.4",
-    "ip": "1.1.5",
-    "sprintf-js": "1.1.2",
+    "express": "^4.16.4",
+    "ip": "^1.1.5",
+    "json-log": "^3.0.1",
     "properties-reader": "0.0.16",
-    "json-log": "3.0.1",
-    "request": "2.81.0"
+    "request": "^2.81.0",
+    "sprintf-js": "^1.1.2"
   }
 }
