--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   },
   "dependencies": {
     "bunyan": "^1.8.12",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "ip": "^1.1.5",
     "json-log": "^3.0.1",
-    "properties-reader": "0.0.16",
-    "request": "^2.81.0",
-    "sprintf-js": "^1.1.2"
+    "uuid": "^7.0.2"
   }
 }
